--- a/AulasDW/exercicio-aula-13-03/css/reset.css
+++ b/AulasDW/exercicio-aula-13-03/css/reset.css
@@ -11,5 +11,5 @@ html {
 }
 
 body {
-    font-family: Arial, Arial, Helvetica, sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
