--- a/AulasDW/exercicio-aula-20-03/css/style.css
+++ b/AulasDW/exercicio-aula-20-03/css/style.css
@@ -5,24 +5,33 @@ body {
 
 h1 {
     text-align: center;
+    color:#b87e288f;
 }
 
 /* Gap, define o espaçamento entre todos os elementos dentro do formulário de forma universal */
 form {
-    display: flex;
     gap: 10px;
-    margin-bottom: 20px;
+    display: grid;
+    place-items: center;
 }
 
-input[type="text"] {
+input[type="number"] {
     /* Faz o input crescer até ocupar todo o espaço disponível */
     flex: 1;
     padding: 8px;
+    width: 200px;
+    height: 40px;
+    padding: 10px; 
+    font-size: 16px; 
+    border: 1px solid #ccc; 
+    border-radius: 5px; 
+    margin-bottom: 10px; 
 }
 
 button {
-    padding: 8px 16px;
+    padding: 16px 32px;
     cursor: pointer;
+    color: #30b624c4;
 }
 
 ul {
@@ -31,25 +40,25 @@ ul {
 }
 
 li {
-    background-color: #f9f9f9;
+    background-color: #6866668f;
     margin-bottom: 5px;
     padding: 8px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     border-radius: 4px;
-}
-
-.remover {
-    margin-left: 16px;
-    background-color: #ff5c5c;
-    color: #fff;
     border: none;
-    cursor: pointer;
-    padding: 4px 8px;
-    border-radius: 4px;
 }
 
-.remover:hover {
-    opacity: 0.8;
+form button {
+    width: 150px;
+    height: 40px; 
+    padding: 10px;
+    font-size: 16px; 
+    border: none; 
+    border-radius: 5px; 
+    background-color: #30b624c4; 
+    color: #000; 
+    cursor: pointer; 
 }
+
